tests/snapshots/examples_fixtures/type_system__failing__01_compile_type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/01_compile_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E055]: TYPE MISMATCH

Expected Int, got String.

  --> examples/type_system/failing/01_compile_type_mismatch.flx:6:5
  |
6 | add("x", 2)
  |     ^^^
  |     --- argument type is known at compile time

Help:
  argument #1 does not match function contract
== stdout ==
<not executed>
