tests/snapshots/examples_fixtures/type_system__failing__08_compile_identifier_type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/08_compile_identifier_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The value of `n` does not match its type annotation.

  --> examples/type_system/failing/08_compile_identifier_type_mismatch.flx:2:14
  |
2 | let n: Int = value
  |              ^^^^^
  |              ----- this is `String`
  |        --- but `n` was annotated as `Int`

Help:
  Change `n` to a `Int` value or update the annotation to `String`.
== stdout ==
<not executed>
