tests/snapshots/examples_fixtures/type_system__failing__09_compile_typed_call_return_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/09_compile_typed_call_return_mismatch.flx:5:14
  |
5 | let n: Int = make_label()
  |              ^^^^^^^^^^^^
  |              ------------ expected Int, found String
  |              ------------ initializer type is known at compile time

Help:
  binding initializer does not match type annotation
== stdout ==
<not executed>
